y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'

  20  $$5 :

  21  $$6 :

  22  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  23  $$7 :

  24  cmd : IF '(' exp $$7 ')' cmd restoIf

  25  $$8 :

  26  restoIf : ELSE $$8 cmd
  27          |

  28  exp : NUM
  29      | TRUE
  30      | FALSE
  31      | ID
  32      | '(' exp ')'
  33      | '!' exp
  34      | exp '+' exp
  35      | exp '-' exp
  36      | exp '*' exp
  37      | exp '/' exp
  38      | exp '%' exp
  39      | exp '>' exp
  40      | exp '<' exp
  41      | exp EQ exp
  42      | exp LEQ exp
  43      | exp GEQ exp
  44      | exp NEQ exp
  45      | exp OR exp
  46      | exp AND exp
  47      | ID '=' exp
  48      | ID MAISATRIB exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	'{'  shift 30
	'}'  reduce 4

	$$3  goto 31
	cmd  goto 32
	exp  goto 33


state 20
	exp : ID .  (31)
	exp : ID . '=' exp  (47)
	exp : ID . MAISATRIB exp  (48)

	MAISATRIB  shift 34
	'='  shift 35
	EQ  reduce 31
	LEQ  reduce 31
	GEQ  reduce 31
	NEQ  reduce 31
	AND  reduce 31
	OR  reduce 31
	'>'  reduce 31
	'<'  reduce 31
	'+'  reduce 31
	'-'  reduce 31
	'*'  reduce 31
	'/'  reduce 31
	'%'  reduce 31
	')'  reduce 31
	';'  reduce 31


state 21
	exp : NUM .  (28)

	.  reduce 28


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 36
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 37
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (24)

	'('  shift 38
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (22)
	$$5 : .  (20)

	.  reduce 20

	$$5  goto 39


state 26
	exp : TRUE .  (29)

	.  reduce 29


state 27
	exp : FALSE .  (30)

	.  reduce 30


state 28
	exp : '!' . exp  (33)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 40


state 29
	exp : '(' . exp ')'  (32)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 41


state 30
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 42


state 31
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 43
	.  error


state 32
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 33
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	EQ  shift 44
	LEQ  shift 45
	GEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	'>'  shift 50
	'<'  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	';'  shift 57
	.  error


state 34
	exp : ID MAISATRIB . exp  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 58


state 35
	exp : ID '=' . exp  (47)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 59


state 36
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 60
	.  error


state 37
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 61
	.  error


state 38
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (24)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 62


state 39
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (22)

	'('  shift 63
	.  error


state 40
	exp : '!' exp .  (33)
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	.  reduce 33


state 41
	exp : '(' exp . ')'  (32)
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	EQ  shift 44
	LEQ  shift 45
	GEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	'>'  shift 50
	'<'  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	')'  shift 64
	.  error


state 42
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	'{'  shift 30
	'}'  shift 65
	.  error

	cmd  goto 32
	exp  goto 33


state 43
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 44
	exp : exp EQ . exp  (41)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 66


state 45
	exp : exp LEQ . exp  (42)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 67


state 46
	exp : exp GEQ . exp  (43)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 68


state 47
	exp : exp NEQ . exp  (44)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 69


state 48
	exp : exp AND . exp  (46)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 70


state 49
	exp : exp OR . exp  (45)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 71


state 50
	exp : exp '>' . exp  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 72


state 51
	exp : exp '<' . exp  (40)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 73


state 52
	exp : exp '+' . exp  (34)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 74


state 53
	exp : exp '-' . exp  (35)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 75


state 54
	exp : exp '*' . exp  (36)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 76


state 55
	exp : exp '/' . exp  (37)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 77


state 56
	exp : exp '%' . exp  (38)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 78


state 57
	cmd : exp ';' .  (14)

	.  reduce 14


state 58
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)
	exp : ID MAISATRIB exp .  (48)

	EQ  shift 44
	LEQ  shift 45
	GEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	'>'  shift 50
	'<'  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	')'  reduce 48
	';'  reduce 48


state 59
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)
	exp : ID '=' exp .  (47)

	EQ  shift 44
	LEQ  shift 45
	GEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	'>'  shift 50
	'<'  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	')'  reduce 47
	';'  reduce 47


state 60
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 79
	.  error


state 61
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 80
	','  reduce 17

	$$4  goto 81


state 62
	cmd : IF '(' exp . $$7 ')' cmd restoIf  (24)
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)
	$$7 : .  (23)

	EQ  shift 44
	LEQ  shift 45
	GEQ  shift 46
	NEQ  shift 47
	AND  shift 48
	OR  shift 49
	'>'  shift 50
	'<'  shift 51
	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	')'  reduce 23

	$$7  goto 82


state 63
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (22)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	'!'  shift 28
	'('  shift 29
	.  error

	exp  goto 83


state 64
	exp : '(' exp ')' .  (32)

	.  reduce 32


state 65
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


state 66
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp EQ exp .  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	EQ  reduce 41
	LEQ  reduce 41
	GEQ  reduce 41
	NEQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	')'  reduce 41
	';'  reduce 41


state 67
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp LEQ exp .  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	EQ  reduce 42
	LEQ  reduce 42
	GEQ  reduce 42
	NEQ  reduce 42
	AND  reduce 42
	OR  reduce 42
	'>'  reduce 42
	'<'  reduce 42
	')'  reduce 42
	';'  reduce 42


state 68
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp GEQ exp .  (43)
	exp : exp . NEQ exp  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)

	'+'  shift 52
	'-'  shift 53
	'*'  shift 54
	'/'  shift 55
	'%'  shift 56
	EQ  reduce 43
	LEQ  reduce 43
	GEQ  reduce 43
	NEQ  reduce 43
	AND  reduce 43
	OR  reduce 43
	'>'  reduce 43
	'<'  reduce 43
	')'  reduce 43
	';'  reduce 43


state 69
	exp : exp . '+' exp  (34)
	exp : exp . '-' exp  (35)
	exp : exp . '*' exp  (36)
	exp : exp . '/' exp  (37)
	exp : exp . '%' exp  (38)
	exp : exp . '>' exp  (39)
	exp : exp . '<' exp  (40)
	exp : exp . EQ exp  (41)
	exp : exp . LEQ exp  (42)
	exp : exp . GEQ exp  (43)
	exp : exp . NEQ exp  (44)
	exp : exp NEQ exp .  (44)
	exp : exp . OR exp  (45)
	exp : exp . AND exp  (46)
